# Tarea-2-EDA

imagepro/: CMakeLists.txt  imagepro.cpp
imagepro/include/image/: image.hpp  listofpoint2d.hpp  listofregion.hpp  nodepoint2d.hpp  noderegion.hpp  point2D.hpp  point2d.hpp  region.hpp
imagepro/src/: image.cpp  listofpoint2d.cpp  listofregion.cpp  point2D.cpp  point2d.cpp  region.cpp
